Add locale keys

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -121,5 +121,54 @@
   "enterAnAmount": "Enter an amount",
   "selectAToken": "Select a token",
   "enterARecipient": "Enter a recipient",
-  "invalidRecipt": "Invalid recipient"
+  "invalidRecipt": "Invalid recipient",
+  "haventGotAWalletYet":	"Haven't got a wallet yet?",
+  "learnHowToConnect":	"Learn how to connect",
+  "connectToAWallet":	"Connect to a wallet",
+  "pleaseSelectTokenToViewChart":	"Please select a token to view the chart",
+  "all":	"All",
+  "float":	"Float",
+  "anchor":	"Anchor",
+  "classic":	"Classic",
+  "connectWalletToViewLiquidity":	"Connect wallet to view liquidity",
+  "import":	"Import",
+  "classicLiquidity":	"Classic liquidity",
+  "learn":	"Learn",
+  "yourTransactionsWillAppearHere":	"Your transactions will appear here",
+  "searchNameOrPasteAddress":	"Search token name or paste address",
+  "initializing":	"Initializing",
+  "minimumReceived":	"Minimum received",
+  "priceImpact":	"Price impact",
+  "liquidityProviderFee":	"Liquidity provider fee",
+  "confirmSwap":	"Confirm swap",
+  "waitingForConfirmation":	"Waiting for confirmation",
+  "confirmTransactionInYourWallet":	"Confirm transaction in your wallet",
+  "transactionSubmitted":	"Transaction submitted",
+  "close":	"Close",
+  "recentTransactions":	"Recent transactions",
+  "clearAll":	"Clear all",
+  "change":	"Change",
+  "yourPoolTokens":	"Your pool tokens",
+  "pooled":	"Pooled",
+  "remove":	"Remove",
+  "youAreTheFirstLiquidityProvider":	"You are the first liquidity provider",
+  "thisWillCreatePylonForThisPair":	"This will create a Pylon for this pair",
+  "onceHappyWithPairClickCreatePairToReview":	"Once you are happy with the pair ratio, click create pair to review",
+  "createPair":	"Create pair",
+  "createPylon":	"Create pair",
+  "createPairAndPylon":	"Create pair and Pylon",
+  "yourFloatPosition":	"Your Float position",
+  "yourAnchorPosition":	"Your Anchor position",
+  "advancedMode":	"Advanced mode",
+  "approve":	"Approve",
+  "approving":	"Approving",
+  "deposited":	"Deposited",
+  "rates":	"Rates",
+  "confirmSupply":	"Confirm supply",
+  "simple":	"Simple",
+  "detailed":	"Detailed",
+  "withdrawalMode":	"Withdrawal mode",
+  "receive":	"Receive",
+  "supply":	"Supply",
+  "connectCorrectNetwork":	"Please connect to the appropriate network"
 }
