anchor to stable

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -158,7 +158,7 @@
   "createPylon":	"Create pair",
   "createPairAndPylon":	"Create pair and Pylon",
   "yourFloatPosition":	"Your Float position",
-  "yourAnchorPosition":	"Your Anchor position",
+  "yourAnchorPosition":	"Your Stable position",
   "advancedMode":	"Advanced mode",
   "approve":	"Approve",
   "approving":	"Approving",
