--- a/public/locales/it-IT.json
+++ b/public/locales/it-IT.json
@@ -2,7 +2,7 @@
   "noWallet": "Wallet Ethereum non trovato",
   "wrongNetwork": "Sei connesso alla rete sbagliata",
   "switchNetwork": "Perfavore connettiti su {{ correctNetwork }}",
-  "installWeb3MobileBrowser": "Perfavore visita il sito da un browser abilitato web3 o da un app mobile come Trust Wallet o Coinbase Wallet.",
+  "installWeb3MobileBrowser": "Per favore visita il sito da un browser abilitato web3 o da un app mobile come Trust Wallet o Coinbase Wallet.",
   "installMetamask": "Perfavore ritorna dopo aver installato Metamask su Chrome o Brave.",
   "disconnected": "Disconnesso",
   "swap": "Scambia",
@@ -83,5 +83,49 @@
   "decimals": "Decimali",
   "enterTokenCont": "Inserire un indirizzo token per continuare",
   "priceChange": "Scostamento del prezzo previsto",
-  "forAtLeast": "per almeno "
+  "forAtLeast": "per almeno ",
+  "haventGotAWalletYet" : "Non hai ancora un wallet?",
+  "learnHowToConnect" : "Impara come connetterti",
+  "connectToAWallet" : "Connetti un wallet",
+  "pleaseSelectTokenToViewChart": "Seleziona un token per visualizzare il grafico",
+  "transactionSettings": "Impostazioni transazione",
+  "slippageTolerance": "Tolleranza slittamento",
+  "transactionDeadline": "Scadenza transazione",
+  "minutes": "minuti",
+  "interfaceSettings": "Impostazioni interfaccia",
+  "toggleExpertMode": "Attiva modalità esperto",
+  "connectWallet": "Connetti un wallet",
+  "all" : "Tutti",
+  "float" : "Float",
+  "stable" : "Stable",
+  "classic" : "Classic",
+  "connectWalletToViewLiquidity": "Connetti un wallet per visualizzare la tua liquidità",
+  "import" : "Importa",
+  "classicLiquidity" : "Liquidità Classic",
+  "learn" : "Impara",
+  "yourTransactionsWillAppearHere": "Le tue transazioni appariranno qui",
+  "searchNameOrPasteAddress" : "Cerca per nome o incolla l'indirizzo",
+  "selectAToken" : "Seleziona un token",
+  "initializing" : "Inizializzando",
+  "enterAnAmount" : "Inserisci un importo",
+  "minimumReceived" : "Importo minimo ricevuto",
+  "priceImpact" : "Impatto sul prezzo",
+  "liquidityProviderFee" : "Commissione fornitori di liquidità",
+  "confirmSwap" : "Conferma scambio",
+  "price" : "Prezzo",
+  "waitingForConfirmation" : "In attesa di conferma",
+  "confirmTransactionInYourWallet" : "Conferma la transazione nel tuo wallet",
+  "transactionSubmitted" : "Transazione inviata",
+  "close" : "Chiudi",
+  "recentTransactions" : "Transazioni recenti",
+  "clearAll" : "Azzera",
+  "change" : "Cambia",
+  "noLiquidityFound" : "Nessuna liquidità trovata",
+  "yourPoolTokens" : "I tuoi pool tokens",
+  "pooled" : "Pooled",
+  "add" : "Aggiungi",
+  "remove" : "Rimuovi",
+  "youAreTheFirstLiquidityProvider" : "Sei il primo liquidity provider",
+  "thisWillCreatePylonForThisPair" : "Questo creerà un pool di Pylon per questa coppia"
+
 }
